[package]
name = "input-debug"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
eyre = "0.6.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
windows = { version = "0.61.1", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_Foundation"] }

[profile.release]
strip = true
opt-level = "z"  # Optimize for size.
codegen-units = 1
lto = true
panic = "abort"